force-app/main/default/objects/myV2MOM__V2MOM__c/fields/myV2MOM__FY_Year__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__FY_Year__c</fullName>
    <label>FY Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>