force-app/main/default/objects/myV2MOM__V2MOM__c/fields/myV2MOM__Published_Date__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Published_Date__c</fullName>
    <label>Published Date</label>
    <type>Date</type>
</CustomField>