force-app/main/default/objects/myV2MOM__V2MOM__c/fields/myV2MOM__User__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>V2MOM</relationshipName>
    <type>Lookup</type>
</CustomField>