force-app/main/default/objects/myV2MOM__V2MOM__c/fields/myV2MOM__Values__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Values__c</fullName>
    <label>Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>