force-app/main/default/objects/myV2MOM__V2MOM__c/listViews/myV2MOM__All.listView-meta.xml
<ListView>
    <fullName>myV2MOM__All</fullName>
    <columns>NAME</columns>
    <columns>myV2MOM__Status__c</columns>
    <columns>myV2MOM__FY_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>